--- a/client.html
+++ b/client.html
@@ -3,11 +3,18 @@
     <head>
         <title>Python Websocket Client</title>
 		<style>
+			body{
+				font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 26.4px;
+				color: #000;
+				overflow:hidden;
+			}
 			input{
+				font-family: "Arial Rounded MT", "Helvetica Rounded", Arial, sans-serif; font-size: 20px; font-style: normal; font-variant: normal;
+				color: #222;
 				margin:5px;
 				padding:5px;
 			}
-			p,b{
+			p, b{
 				margin:5px;
 				padding:5px;
 			}
@@ -15,171 +22,193 @@
 				display:none;
 				margin:auto;
 				text-align:center;
-				width:300px;
+				width:80%;
 				position:relative;
-			}
-			.menu_won{
-				background-color:#ddffdd;
-			}
-			.menu_lost{
-				background-color:#ffdddd;
-			}
-			.menu_tie{
-				background-color:#ffffdd;
-			}
-			#cooperate{
-				background-color:#ccddcc;
-			}
-			#defect{
-				background-color:#ddcccc;
-			}
-			#output{
-				text-align:center;
-				display:none;
 			}
 			input[type=button]{
 				display:block;
+				margin: 12px auto 8px auto;
+				text-align:center;
+			}
+			#menu_connect{
+				display:block;
+			}
+			#output{
+				display:block;
+				position:relative;
+				top:20px;
+				right:8px;
+				height:200px;
+				width:100%;
 				margin:auto;
 				text-align:center;
+				background-color:#ccc;
+				padding:8px;
+				overflow-y:scroll;
+				text-align:left;
+				font-size:12px;
+			}
+			#json{
+				border: 1px solid #ddd;
+				background-color:#eee;
+				border-radius:5px;
+				display:block;
+				margin:auto;
+				padding:8px;
+				margin-top:20px;
+				width:80%;
+				text-align:left;
+				font-family: "Lucida Console", Monaco, monospace;
+				font-size:16px;
+				font-weight:500;
 			}
 		</style>
     </head>
-	<script src="tmp/js/jquery.min.js"></script>
+	<script src="legacy/tmp/js/jquery.min.js"></script>
     <body>
-		<div id="menu_join" class="menu">
-			<input id="server" type="text" value="192.168.1.1" placeholder="Server IP" />
+		<div id="menu_connect" class="menu">
+			Connect to ws://<input id="server" type="text" value="192.168.1.1" placeholder="Server IP" />:42069/
 			<input id="connect" type="button" value="Connect to Server" />
 		</div>
 		<div id="menu_login" class="menu">
-			<input id="name" type="text" value="Tibi" placeholder="Please enter your name" />
-			<input id="avatar" type="text" value="Aang" placeholder="Please enter your avatar" />
+			Unique nickname: <input id="nick" type="text" value="" placeholder="Nick" />
 			<input id="login" type="button" value="Log In" />
 		</div>
-		<div id="menu_start" class="menu">
-			<input id="ready" type="button" value="Look for match" />
+		<div id="menu_messaging" class="menu">
+			Message: <input id="msg" type="text" value="" placeholder="" />
+			<input id="send" type="button" value="Send" />
 		</div>
-		<div id="game" class="menu">
-			<input id="cooperate" type="button" value="+" class="choice">
-			<input id="defect" type="button" value="-" class="choice">
-			<br />
-			Playing against <b id="opponent_name">Anonymous</b>
-			<br />
-			<b id="player_score">0</b>-<b id="opponent_score">0</b>
+		<p id="json">connect client to ws://server:port</p>
+		<div id="output" class="menu">
+			OUTPUT
 		</div>
-		<p id="output">Connecting...</p>
+
         <script>
-			var name = "";
-			var avatar = "";
 			var timer = + new Date();
             var ws = null;
 			var ping = 0;
-			var inGame = false;
-			var isSubject = false;
+			var logged_in = false;
+			var nick = "";
+			var output = "";
 			$("#server").val(localStorage["server"]);
-			$("#menu_join").show();
+			$("#nick").val(localStorage["nick"]);
 
-			$("#connect").mousedown(function(event){
-				localStorage["server"] = $("#server").val()
-				ws = new WebSocket("ws://"+localStorage["server"]+":8765/");
-				ws.onopen = function() {
-					$("#menu_join").hide();
+			$("#connect").click(function(event){
+				$("#connect").attr("disabled", true);
+				localStorage["server"] = $("#server").val();
+				ws = new WebSocket("ws://"+localStorage["server"]+":42069/");
+
+				ws.onopen = function(event) {
+					$("#menu_connect").hide();
 					$("#menu_login").show();
-					inGame = false;
+					$("#login").click(function(event){
+						nick = $("#nick").val();
+						if (nick.length < 1){
+							return;
+						}
+						$("#login").attr("disabled", true);
+						localStorage["nick"] = nick;
+						payload = {
+							"system": "login",
+							"options": {
+								"user": nick,
+								"pass": "1234"
+							}
+						}
+						send(payload);
+						$("#login").attr("disabled", false);
+					});
+					$("#send").click(function(event){
+						msg = $("#msg").val();
+						if (msg.length < 1){
+							return;
+						}
+						payload = {
+							"room": "lobby",
+							"type": "msg",
+							"data": msg
+						}
+						send(payload);
+						msg = $("#msg").val("");
+					});
+					explain('{"system": "login", "options": {"user": "...", "pass": "..."}}')
 				};
 
 				ws.onmessage = function (event) {
 					data = JSON.parse(event["data"]);
-					if ("message" in data){
-						timer = (+ new Date());
-						if (ping){
-							console.log(timer-ping);
-						}
-						$("#output").text(data["message"]);
-					}
-					if ("game" in data){
-						setupGame(data);
+					timer = (+ new Date());
+					if (ping){
+						console.log(timer - ping);
 					}
 					ping = 0;
+					receive(data);
+
+					if (!logged_in){
+						if (data["info"] == "system"){
+							if ("response" in data && "code" in data["response"]){
+								if (data["response"]["code"] == 202){
+									// access granted
+									$("#menu_login").hide();
+									$("#menu_messaging").show();
+									logged_in = true;
+									explain('{"room": "lobby", "type": "msg", "data": "hello"}');
+								}
+							}
+						}
+					}else{
+
+					}
 				};
+
+ 				ws.onerror = function(event) {
+            		$("#output").text("Unexpected Network Error.");
+            		console.log(event);
+         		};
 
 				ws.onclose = function(event) {
-					$("#output").text("Server disconnected.");
-					console.log(event);
-					inGame = false;
-				};
-			});
-
-			$("#login").mousedown(function(event){
-				name = $("#name").val();
-				avatar = $("#avatar").val();
-				isSubject = (event.which!=3);
-				data = {
-					"name": name,
-					"avatar": avatar,
-					"type": (isSubject?"SUBJECT":"EXPERIMENTER")
-				};
-				$("#menu_login").hide();
-				$("#menu_start").show();
-				send(data);
-				inGame = true;
-			});
-
-			$("#ready").mousedown(function(event){
-				data = {
-					"ready": true
-				}
-				$("#menu_start").hide();
-				$("#output").show();
-				send(data);
-			});
-
-			$("#cooperate").click(function(event){
-				data = {
-					"choice": "cooperate"
-				}
-				send(data);
-			});
-
-			$("#defect").click(function(event){
-				data = {
-					"choice": "defect"
-				}
-				send(data);
-			});
-
-
-			function setupGame(data){
-				console.log(data);
-				$("#cooperate").prop('disabled', true);
-				$("#defect").prop('disabled', true);
-				setTimeout(function(data){
-					if (data["is_vr"] && false){
-						$("#game").hide();
-						$("#output").html("Your next session will be in VR");
-					}else if (data["is_over"]){
-						$("#game").hide();
-						$("#output").html("Thank you for playing!");
+					if (event.code == 1000) {
+						$("#output").text("Connection closed.");
 					}else{
-						$("#game").show();
-						//$("#player_name").html(name);
-						$("#opponent_name").html(data["name"]);
-						if (isSubject){
-							$("#player_score").html(data["game"]["SUBJECT"]["score"])
-							$("#opponent_score").html(data["game"]["EXPERIMENTER"]["score"])
-						}else{
-							$("#player_score").html(data["game"]["EXPERIMENTER"]["score"])
-							$("#opponent_score").html(data["game"]["SUBJECT"]["score"])
-						}
+						$("#output").text("Server disconnected.");
 					}
-					$("#cooperate").prop('disabled', false);
-					$("#defect").prop('disabled', false);
-				},data["loading"]*1000,data);
-			}
+					$("#connect").attr("disabled", false);
+					output = "";
+					nick = "";
+					logged_in = false;
+					ws = null;
+					console.log(event);
+				};
+
+			});
 
 			function send(data){
-				ping = (+ new Date());
-				ws.send(JSON.stringify(data));
+				if (ws){
+					ping = (+ new Date());
+					ws.send(JSON.stringify(data));
+				}
 			};
+
+			function receive(data){
+				if (data["info"] != "user"){
+					from = "<b>SYSTEM</b>";
+					msg = data["response"]["msg"];
+					output += from + ": " + msg + "<br/>\n";
+				}else{
+					for (var i=0; i<data["payload"].length; i++){
+						if (data["payload"][i]["type"] == "msg"){
+							from = data["payload"][i]["user"];
+							msg = data["payload"][i]["data"];
+							output += from + ": " + msg + "<br/>\n";
+						}
+					}
+				}
+				$("#output").html(output);
+				$('#output').scrollTop($('#output')[0].scrollHeight);
+			}
+
+			function explain(json){
+				$("#json").text(json);
+			}
         </script>
     </body>
 </html>
